# nuclear_project

./: .cursorignore  .cursorrules  .env.example  .gitignore  AI_Prompt完整清單_V8.0.md  AI_Prompt完整清單_V8.0_完整版.md  AI任務vs程式計算任務完整分類表_V8.0.md  AI模型Token需求分析與推薦_V8.0.md  AI模型Token需求分析與推薦_V8.0_修正版.md  AI模型Token需求分析與推薦_V8.0_最終版.md  CSE_KEYS設置說明.md  CSE使用檢查報告_V8.0.md  CSE新增修改清單_V8.0.md  CSE衍生品配置建議_V8.0.md  Cursor_CLI全自動測試迴圈可行性_2026-01-28.md  Cursor_Windows安裝指南.md  Cursor對話壓縮問題解決方案.md  DSFP身份動態化原則_討論整理_待定案.md  Daily每日蒐集清單與白名單_SSOT級_2026-01-26.md  Dockerfile  Dockerfile.p6  Dockerfile.worker  DualFPE完整實現檢查報告_V8.0.md  FPE_A_B定位定案_V8.0.md  FPE_A數據來源驗證報告_V8.0.md  FPE_B實作總結_V8.0.md  FPE_B整合到P2.5評估_V8.0.md  FPE_B整合到P5市場情緒指標_V8.0.md  FPE_B整合到P5確認報告_V8.0.md  FPE_B數據來源比較_Yahoo_vs_財報狗.md  FPE_B數據來源評估報告_V8.0.md  FPE_B數據管線測試指南_V8.0.md  FPE_B爬蟲實現難度評估_V8.0.md  FPE修正說明_V8.0.md  FPE定義修正_V8.0.md  FPE更正完成總結_V8.0.md  GAS妥協清算與Python重建工程備忘錄_待定案.md  GAS更新完成報告_2026-01-24.md  GAS更新準備清單_2026-01-24.md  GOOGLEFINANCE測試使用說明_V8.0.md  (+185 more)
.cursor/: fix_queue.json.example
alembic/: env.py
deploy/: nuclear-daily.service  nuclear-daily.timer  nuclear-p6.service  nuclear-weekly.service  nuclear-weekly.timer
docs/: README_docs_governance.md  d1a_news_whitelist.md  d1b_forum_whitelist.md  milestone.yaml  registry.yaml
gas_archive/: .clasp.json  .claspignore  README.md
tests/: test_db_schema.py  test_health.py  test_hermes_parser.py  test_m00_flow.py  test_m01_snapshot_flow.py  test_m02_db_index.py  test_m03_reconciliation.py  test_m04a_learning_state.py  test_m04b_candidates.py  test_m04c_compiler.py  (+8 more)
(+312 files in other folders)
