[tool.poetry]
name = "nuclear"
version = "0.1.0"
description = "Nuclear Project - Python migration (WB-1/WB-2/W-A, P6 daemon, Hermes 4 reasoning trace)"
authors = ["Nuclear Team"]
readme = "README.md"
packages = [{include = "nuclear", from = "src"}]

[tool.poetry.scripts]
nuclear = "nuclear.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
httpx = "^0.27.2"
tenacity = "^9.0.0"
structlog = "^24.4.0"
psycopg2-binary = "^2.9.10"
boto3 = "^1.35.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
